--- a/Cosc 305 I11.md
+++ b/Cosc 305 I11.md
@@ -1,1 +1,8 @@
-# Cosc 305 Assignment 6:
+# Cosc 305 Lab 11 - Project Management Simulation Reflection:
+
+### Samira Almuallim, 62197256, 2025 WT1
+
+## Q1:
+
+I learnt ways to reinforce lessons I have previously learnt in experiences as a project manager for organizations and teams such as OSPREY. I was able to apply concepts such as HR and personnel management, such as the concepts of team morale and the human component. I also learnt the importance of risk management in the context of project management, and how to plan for changes in scope, time, & schedule. I also  focused on the conflict resolution skills and strategies that are mandatory for any PM to have in order to ensure the success of a project.
+
