--- a/Cosc 305 I11.md
+++ b/Cosc 305 I11.md
@@ -6,3 +6,10 @@
 
 I learnt ways to reinforce lessons I have previously learnt in experiences as a project manager for organizations and teams such as OSPREY. I was able to apply concepts such as HR and personnel management, such as the concepts of team morale and the human component. I also learnt the importance of risk management in the context of project management, and how to plan for changes in scope, time, & schedule. I also  focused on the conflict resolution skills and strategies that are mandatory for any PM to have in order to ensure the success of a project.
 
+## Q2:
+
+The most challenging aspect of the project was creating a realistic project schedule for a specific project. During teh audit I realized I was stuck using extremely general things such as "development" and "testing" without breaking them down into smaller tasks. I feel I would have been able to do such a thing easily for a specific project I was confident with, but a project surrounding the most standard full stack system I resorted to generic things in the Gantt chart.
+
+## Q3:
+
+The 
