--- a/Cosc 305 I11.md
+++ b/Cosc 305 I11.md
@@ -12,4 +12,4 @@ The most challenging aspect of the project was creating a realistic project sche
 
 ## Q3:
 
-The 
+The thing I would change about the project would be a more specific project idea. This would both allow for a more realistic project schedule to be created, and also allow for more specific Gantt chart. I would also change the way the teams were organized, as I feel that having a 4th team member would have allowed for a better end product and better kinds of iterative development.
