--- a/Cosc 305 I11.md
+++ b/Cosc 305 I11.md
@@ -1,4 +1,4 @@
-# Cosc 305 Lab 11 - Project Management Simulation Reflection:
+# Cosc 305 Lab 11 - Project Management Reflection:
 
 ### Samira Almuallim, 62197256, 2025 WT1
 
