--- a/Cosc 305 P11.md
+++ b/Cosc 305 P11.md
@@ -2,6 +2,9 @@
 
 ##### Lab 04 team Seg Faults 2025 WT1
 
+## Readme:
+
+The readme can be found [**HERE**](https://github.ubc.ca/samialmu/L04-SegFaults/blob/main/README.md)
 
 ## Reflection:
 
