Update Cosc 305 P11.md

--- a/Cosc 305 P11.md
+++ b/Cosc 305 P11.md
@@ -4,7 +4,8 @@
 
 ## Readme:
 
-The readme can be found [**HERE**](https://github.ubc.ca/samialmu/L04-SegFaults/blob/main/README.md)
+The readme can be found [**HERE**](https://github.ubc.ca/samialmu/L04-SegFaults/blob/main/README.md). This should be completed by Akash and Estella by the due date.
+
 
 ## Reflection:
 
